--- a/index.html
+++ b/index.html
@@ -92,16 +92,12 @@
     </ul>
 
     <div class="copyright">
-      <img src="./img/logokucing.png" alt="logokucing">
+      <img src="./img/logokucing.png" alt="logokucing" />
       <p>Copyright HitmanCute &copy; 2024</p>
     </div>
 
     <!-- Toast Notification -->
-    <div id="toast">
-      <div class="toast-container">
-        <p>✅ Link Berhasil disalin</p>
-      </div>
-    </div>
+    <div id="toast"></div>
     <script src="/script.js"></script>
   </body>
 </html>
