--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <title>Dafa Bio Links</title>
   </head>
   <body>
+    <!-- Background Animation Text -->
+    <span class="bg-text-animation">wellcome</span>
+
     <!-- Profile -->
     <img class="my-photo" src="./img/MyPet.jpg" alt="Cat Logo" />
     <h1>Dafa Putra</h1>
@@ -37,7 +40,7 @@
       <li>
         <a href="https://discord.gg/eFKbFrCr" target="_blank" class="link-card">
           <div class="link-icon">
-            <i class="ph-fill ph-chat-circle"></i>
+            <i class="ph-fill ph-discord-logo"></i>
           </div>
           <p class="link-text">Join Channel Discord</p>
           <div class="link-action">
@@ -46,44 +49,30 @@
         </a>
       </li>
       <li>
-        <a href="https://discord.com" target="_blank" class="link-card">
+        <a
+          href="https://saweria.co/hitmancute"
+          target="_blank"
+          class="link-card"
+        >
           <div class="link-icon">
-            <i class="ph-fill ph-chat-circle"></i>
+            <i class="ph-fill ph-tip-jar"></i>
           </div>
-          <p class="link-text">Join Channel Discord</p>
+          <p class="link-text">Join Donasi Saweria</p>
           <div class="link-action">
             <i class="ph-fill ph-copy"></i>
           </div>
         </a>
       </li>
       <li>
-        <a href="https://discord.com" target="_blank" class="link-card">
+        <a
+          href="https://chat.whatsapp.com/Dx2LknFILNJ7w6ofhklgyU"
+          target="_blank"
+          class="link-card"
+        >
           <div class="link-icon">
             <i class="ph-fill ph-chat-circle"></i>
           </div>
-          <p class="link-text">Join Channel Discord</p>
-          <div class="link-action">
-            <i class="ph-fill ph-copy"></i>
-          </div>
-        </a>
-      </li>
-      <li>
-        <a href="https://discord.com" target="_blank" class="link-card">
-          <div class="link-icon">
-            <i class="ph-fill ph-chat-circle"></i>
-          </div>
-          <p class="link-text">Join Channel Discord</p>
-          <div class="link-action">
-            <i class="ph-fill ph-copy"></i>
-          </div>
-        </a>
-      </li>
-      <li>
-        <a href="https://discord.com" target="_blank" class="link-card">
-          <div class="link-icon">
-            <i class="ph-fill ph-chat-circle"></i>
-          </div>
-          <p class="link-text">Join Channel Discord</p>
+          <p class="link-text">Join whatsapp Brother From Another Mother</p>
           <div class="link-action">
             <i class="ph-fill ph-copy"></i>
           </div>
